--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -40,6 +40,14 @@ dependencies:
   get_it: ^7.6.4
   flutter_dotenv: ^5.1.0
   logger: ^2.0.2+1
+  provider: ^6.1.1
+  equatable: ^2.0.5
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  shared_preferences: ^2.2.2
+  http: ^1.1.0
+  csv: ^5.1.1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - lib/core/localization/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
