--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   intl: any
   shared_preferences: ^2.2.2
   http: ^1.1.0
-  csv: ^5.1.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
